--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,7 +52,8 @@ body {
   
   /* header */
   
-  #masthead {
+  
+  /* #masthead {
     position: fixed;
     z-index: 99;
     width: 100%;
@@ -94,7 +95,7 @@ body {
   
   nav a:first-child {
     border-left: 0 none;
-  }
+  } */
   
   /* footer */
   
@@ -108,6 +109,8 @@ body {
     background: #666666;
     border-top: 8px solid #4aaaa5;
     height: 50px;
+    position: fixed;
+    width: 100%;
   }
   
   h3, h2 {
@@ -136,7 +139,7 @@ body {
   
   /* portfolio page */
   
-  .work {
+  .life {
     position: relative;
     float: left;
     width: 274px;
@@ -144,17 +147,19 @@ body {
     overflow: auto;
   }
   
-  .work:nth-child(even) {
+  .life:nth-child(even) {
     margin-right: 40px;
   }
   
-  .work img {
-    width: 100%;
+  .life img {
+    width: 275px;
+    height: 275px;
     border: 0 none;
     opacity: 0.8;
+
   }
   
-  .work h3 {
+  .life h3 {
     position: absolute;
     bottom: 20px;
     width: 100%;
