--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,13 +50,16 @@ h2, h3 {
   position: fixed;
   z-index: 99;
   width: 100%;
-  height: 90px;
+  height: auto;
   margin: 0px 0px 30px;
   padding: 10px;
-  overflow: auto;
   color: #ffffff;
   background: #ffffff;
   border-bottom: 2px solid #cccccc;
+}
+.navbar-mine {
+  display:flex;
+  justify-content: space-between;
 }
 
 .navbar-brand {
@@ -203,3 +206,9 @@ input[type=submit] {
   background: #4aaaa5;
   border: 0 none;
 }
+
+#navbarNav {
+  height:100%;
+}
+
+
